# Inference

./: .gitignore  API_DEMO.md  CMakeLists.txt  README.md  main.cpp  quick_test.sh  run.sh  test_api.sh
include/: inference_service.h  inference_service.hpp  logger.hpp  performance_monitor.hpp  web_api_server.hpp
src/: inference_service.cpp
tests/: CMakeLists.txt  README.md  build_test.sh
tests/manual/: test_camera.cpp
tests/performance/: perf_frame_processing.cpp
tests/unit/: test_logger.cpp
